[project]
name = "resemble-denoise-onnx-inference"
version = "0.1.0"
description = "resemble-denoise-onnx-inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "onnxruntime>=1.22.1",
    "resampy>=0.4.3",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.20.0",
]
