[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resemble-denoise-onnx-inference"
version = "0.1.0"
description = "ONNX-based audio denoising using Resemble AI model"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Alexander Vlasov", email = "avlasov.it@gmail.com"}
]
keywords = ["audio", "denoising", "onnx", "resemble"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "onnxruntime>=1.22.1",
    "resampy>=0.4.3",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.20.0",
]

[project.urls]
Repository = "https://github.com/Braknaier/resemble-denoise-onnx-inference"
Issues = "https://github.com/Braknaier/resemble-denoise-onnx-inference/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["resemble_denoise*"]
